# src/controllers/user.controller.ts
@@ -23,8 +23,35 @@ export async function handleLogout(
   const user = req.userId;
   try {
     await userService.logout(user as string);
-    ResponseManager.handleError(res, { message: "logged out" });
+    ResponseManager.success(res, { message: "logged out" });
   } catch (err: any) {
     ResponseManager.handleError(res, err);
   }
 }
+
+export async function handleGetMerchants(
+  req: Request,
+  res: ExpressResponse
+): Promise<void> {
+  try {
+    const merchants = await userService.getMerchants();
+    ResponseManager.success(res, { merchants });
+  } catch (err: any) {
+    ResponseManager.handleError(res, err);
+  }
+}
+
+export async function handleGetMerchantSchedule(
+  req: Request,
+  res: ExpressResponse
+): Promise<void> {
+  const { merchantId } = req.params;
+  try {
+    const schedule = await userService.getMerchantSchedule(merchantId);
+    ResponseManager.success(res, { schedule });
+  } catch (err: any) {
+    ResponseManager.handleError(res, err);
+  }
+}
+
+//TODO: BOOK APPOINTMENT, CANCEL APPOINTMENT, VIEW APPOINMENTS, VIEW APPOINMENT
