# src/models/index.ts
@@ -2,4 +2,4 @@ export * from "./user/user.model";
 export * from "./user/user.auth.model";
 export * from "./user/user.token.model";
 export * from "./user/user.verification.model";
-export * from "./merchant/merchant.model";
+export * from "./merchant/merchant.schedule.model";
