# src/routes/user.routes.ts
@@ -1,7 +1,12 @@
 import express from "express";
 import { jwtHelper } from "../helpers/jwt/jwt.helper";
 import { userRole } from "../interfaces";
-import { handleGetUserProfile, handleLogout } from "../controllers";
+import {
+  handleGetMerchants,
+  handleGetMerchantSchedule,
+  handleGetUserProfile,
+  handleLogout,
+} from "../controllers";
 
 const userRoutes = express.Router();
 
@@ -11,10 +16,18 @@ userRoutes.get(
   handleGetUserProfile
 );
 
-userRoutes.get(
+userRoutes.post(
   "/logout",
   jwtHelper.requirePermission([userRole.USER, userRole.MERCHANT]),
   handleLogout
+);
+
+userRoutes.get("/merchants", handleGetMerchants);
+
+userRoutes.get(
+  "/schedules/:merchantId",
+  jwtHelper.requirePermission([userRole.USER]),
+  handleGetMerchantSchedule
 );
 
 export default userRoutes;
